# learn-rust

./: .gitignore  Cargo.toml  README.md  rust-learning-plan.md
2. guessing_game/src/: main.rs
3.2 data_types/src/: main.rs
3.3 functions/src/: main.rs
3.5 control_flow/src/: main.rs
4.1 ownership/src/: main.rs
examples/: ch01_hello_world.rs  ch02_guessing_game.rs  ch03_01_variables.rs  ch03_02_data_types.rs  ch03_03_functions.rs  ch03_04_comments.rs  ch03_05_control_flow.rs  ch04_01_ownership.rs  ch04_02_references_borrowing.rs  ch04_03_slices.rs  ch05_01_defining_structs.rs  ch05_02_example_structs.rs  ch05_03_method_syntax.rs  ch06_01_defining_enums.rs  ch06_02_match_control_flow.rs  ch06_03_if_let.rs  ch07_01_packages_crates.rs  ch07_02_defining_modules.rs  ch07_03_module_paths.rs  ch07_04_bringing_paths_into_scope.rs  ch07_05_separating_modules.rs  ch08_01_vectors.rs  ch08_02_strings.rs  ch08_03_hash_maps.rs  ch09_01_unrecoverable_errors_panic.rs  ch09_02_recoverable_errors.rs  ch09_03_to_panic_or_not.rs  ch10_01_generic_data_types.rs  ch10_02_traits.rs  ch10_03_lifetime_syntax.rs  ch11_01_writing_tests.rs  ch11_02_controlling_tests.rs  ch11_03_test_organization.rs  ch12_01_accepting_cli_args.rs  ch12_02_reading_files.rs  ch12_03_refactoring_modularity.rs  ch12_04_tdd_development.rs  ch12_05_environment_variables.rs  ch13_01_closures.rs  ch13_02_iterators.rs  (+30 more)
guessing_game/src/: main.rs
notes/: CHAPTER_TEMPLATE.md  INDEX.md  NEXT_STEPS.md  chapter-00.md  chapter-01.md  chapter-02.md  chapter-03-01.md  chapter-03-02.md  chapter-03-03.md  chapter-03-04.md  chapter-03-05.md  chapter-03.md  chapter-04-01.md  chapter-04-02.md  chapter-04-03.md  chapter-04.md  chapter-05-01.md  chapter-05-02.md  chapter-05-03.md  chapter-05.md  chapter-06-01.md  chapter-06-02.md  chapter-06-03.md  chapter-06.md  chapter-07-01.md  chapter-07-02.md  chapter-07-03.md  chapter-07-04.md  chapter-07-05.md  chapter-07.md  chapter-08-01.md  chapter-08-02.md  chapter-08-03.md  chapter-08.md  chapter-09-01.md  chapter-09-02.md  chapter-09-03.md  chapter-09.md  chapter-10-01.md  chapter-10-02.md  (+54 more)
src/: lib.rs
web_assets/: README.md
web_assets/ch20_web_server/: 404.html  about.html  graceful.html  shutdown.html
